k8s/payments/payments-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments
  labels:
    app: payments
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments
  template:
    metadata:
      labels:
        app: payments
    spec:
      containers:
        - name: payments
          image: adan762/payments:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8004   # payments = 8004

          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8004
            initialDelaySeconds: 20    # give app more boot time
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 5        # retry longer before failing

          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8004
            initialDelaySeconds: 60    # Spring Boot startup can be slow
            periodSeconds: 20
