k8s/payments/payments-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payments
spec:
  selector:
    app: payments
  ports:
    - port: 8004
      targetPort: 8004
  type: ClusterIP
