k8s/payments/payments-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payments-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: tinka.local
      http:
        paths:
          - path: /api/payments(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: payments
                port:
                  number: 8004
